0.6.0
	Updated Polish and Korean translations
	Only respect --showplaylist if no files are specified
	Fix a GTK warning when playlist is not visible
	Make sure playlist is only shown when not embedded
	Add some more code for proper handling of plural messages
	Add Edit->Preferences [Advanced] options for --vertical and --showplaylist
	Fix problem with fullscreen varible being set to FALSE when it should not be
	Implemented ngettext support for plural items
	Keep the selected item in the playlist visible as the playlist progresses
	Change bitrate calculation when video is present, but mplayer reports the video bitrate as 0
	Update the metadata when the media is streaming in thread_query
	Implement get_bitrate dbus method and function
	Add --showplaylist commandline option
	Make sure media label is visible on audio only files
	Couple of playlist window resize changes
	Add commandline option --vertical, which uses a vertical layout for the video and playlist
	Fix bug where video window doesn't disappear when playing audio file after video file
	Fix bug where only first drag and dropped file got metadata
	Move thread unlock to very end of the thread.
	Get seconds in playlist to display right
	GUI Experiment, when playing audio hide the song detail and black area when the playlist is opened
	Command line option to set preferred volume, will take up to 1 second to apply on first song due to GTK idle event timeout
	Fix problem where gnome-mplayer uses more and more resources on long playlist
	Fix segfault when clicking prev or next when nothing has been played
	When using glib 2.14 or higher use more effiencient timeout method, results in lower X usage
	Move menubar out of pane
	Reenable -quiet option when running mplayer, drops gnome-mplayer cpu usage 
	If title from get_metadata is 0 bytes long, then use the file name
	Only fullscreen when doubleclick is done on the video
	Fix Playlist windows resize issues
	Fix seg fault when clearing randomized playlist